branches/wip/Archive/4e7eb0b1a551db45c6e125c1f151bb8b-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:25: error: ‘import_declaration_on_demand’ does not name a type
 void pretty_print(const import_declaration_on_demand import)
                         ^
main.cpp:1:54: error: ISO C++ forbids declaration of ‘import’ with no type [-fpermissive]
 void pretty_print(const import_declaration_on_demand import)
                                                      ^
main.cpp: In function ‘void pretty_print(int)’:
main.cpp:3:15: error: ‘name’ does not name a type
         const name* import_name = import.import;
               ^
main.cpp:4:9: error: ‘cout’ is not a member of ‘std’
         std::cout << "import " << name_to_string(import_name) << ";" << std::endl;
         ^
main.cpp:4:50: error: ‘import_name’ was not declared in this scope
         std::cout << "import " << name_to_string(import_name) << ";" << std::endl;
                                                  ^
main.cpp:4:61: error: ‘name_to_string’ was not declared in this scope
         std::cout << "import " << name_to_string(import_name) << ";" << std::endl;
                                                             ^
main.cpp:4:73: error: ‘endl’ is not a member of ‘std’
         std::cout << "import " << name_to_string(import_name) << ";" << std::endl;
                                                                         ^
main.cpp: At global scope:
main.cpp:7:29: error: ‘import_declaration_single’ does not name a type
     void pretty_print(const import_declaration_single import)
                             ^
main.cpp:7:55: error: ISO C++ forbids declaration of ‘import’ with no type [-fpermissive]
     void pretty_print(const import_declaration_single import)
                                                       ^
main.cpp: In function ‘void pretty_print(int)’:
main.cpp:7:10: error: redefinition of ‘void pretty_print(int)’
     void pretty_print(const import_declaration_single import)
          ^
main.cpp:1:6: error: ‘void pretty_print(int)’ previously defined here
 void pretty_print(const import_declaration_on_demand import)
      ^
main.cpp:9:15: error: ‘name’ does not name a type
         const name* import_name = import.import;
               ^
main.cpp:10:9: error: ‘cout’ is not a member of ‘std’
         std::cout << "import " << name_to_string(import_name) << "." << import.class_name.identifier_string << ";" << std::endl;
         ^
main.cpp:10:50: error: ‘import_name’ was not declared in this scope
         std::cout << "import " << name_to_string(import_name) << "." << import.class_name.identifier_string << ";" << std::endl;
                                                  ^
main.cpp:10:61: error: ‘name_to_string’ was not declared in this scope
         std::cout << "import " << name_to_string(import_name) << "." << import.class_name.identifier_string << ";" << std::endl;
                                                             ^
main.cpp:10:80: error: request for member ‘class_name’ in ‘import’, which is of non-class type ‘const int’
         std::cout << "import " << name_to_string(import_name) << "." << import.class_name.identifier_string << ";" << std::endl;
                                                                                ^
main.cpp:10:119: error: ‘endl’ is not a member of ‘std’
         std::cout << "import " << name_to_string(import_name) << "." << import.class_name.identifier_string << ";" << std::endl;
                                                                                                                       ^
main.cpp: At global scope:
main.cpp:13:29: error: ‘import_declaration’ does not name a type
     void pretty_print(const import_declaration* import)
                             ^
main.cpp:13:49: error: ISO C++ forbids declaration of ‘import’ with no type [-fpermissive]
     void pretty_print(const import_declaration* import)
                                                 ^
main.cpp: In function ‘void pretty_print(const int*)’:
main.cpp:15:21: error: ‘Match’ was not declared in this scope
         Match(import)
                     ^
main.cpp:16:9: error: expected ‘;’ before ‘{’ token
         {
         ^
main.cpp:56:5: error: expected ‘}’ at end of input
     }
     ^
